source/_logs/polly/gcc-arm-cortexm0-cxx14/log-8.txt
Execute command: [
  `which`
  `cmake`
]
[/Volumes/git/m1-sdk/lib]> "which" "cmake"
/usr/local/bin/cmake
Execute command: [
  `cmake`
  `--version`
]
[/Volumes/git/m1-sdk/lib]> "cmake" "--version"
cmake version 3.20.0

CMake suite maintained and supported by Kitware (kitware.com/cmake).
Execute command: [
  `cmake`
  `-H.`
  `-B/Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release`
  `-DCMAKE_BUILD_TYPE=Release`
  `-GUnix Makefiles`
  `-DCMAKE_TOOLCHAIN_FILE=/Volumes/git/polly/gcc-arm-cortexm0-cxx14.cmake`
  `-DCMAKE_INSTALL_PREFIX=/Volumes/git/m1-sdk/lib/_install/gcc-arm-cortexm0-cxx14`
]
[/Volumes/git/m1-sdk/lib]> "cmake" "-H." "-B/Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release" "-DCMAKE_BUILD_TYPE=Release" "-GUnix Makefiles" "-DCMAKE_TOOLCHAIN_FILE=/Volumes/git/polly/gcc-arm-cortexm0-cxx14.cmake" "-DCMAKE_INSTALL_PREFIX=/Volumes/git/m1-sdk/lib/_install/gcc-arm-cortexm0-cxx14"
-- [polly] Used toolchain: Linux / gcc / armhf / c++14 support / cortex-m0
-- The C compiler identification is GNU 10.2.1
-- The CXX compiler identification is GNU 10.2.1
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/local/bin/arm-none-eabi-gcc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/local/bin/arm-none-eabi-g++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release
Execute command: [
  `cmake`
  `--build`
  `/Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release`
  `--config`
  `Release`
  `--target`
  `install`
  `--`
]
[/Volumes/git/m1-sdk/lib]> "cmake" "--build" "/Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release" "--config" "Release" "--target" "install" "--"
[  3%] Building CXX object CMakeFiles/Mach1DecodeMINCAPIstatic.dir/Mach1DecodeMINCAPI.cpp.obj
[  7%] Building CXX object CMakeFiles/Mach1DecodeMINCAPIstatic.dir/Mach1DecodeMINCore.cpp.obj
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp: In member function 'void Mach1DecodeCore::updateAngles()':
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp:148:24: error: 'speedAngle' was not declared in this scope
  148 |   if (((distanceYaw) > speedAngle) /* && (distanceYaw < 360) */) {
      |                        ^~~~~~~~~~
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp:156:26: error: 'speedAngle' was not declared in this scope
  156 |   if (((distancePitch) > speedAngle) /* && (distancePitch < 360) */) {
      |                          ^~~~~~~~~~
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp:164:25: error: 'speedAngle' was not declared in this scope
  164 |   if (((distanceRoll) > speedAngle) && (distanceRoll < 360)) {
      |                         ^~~~~~~~~~
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp: In constructor 'Mach1DecodeCore::Mach1DecodeCore()':
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp:387:2: error: 'platformType' was not declared in this scope
  387 |  platformType = Mach1PlatformDefault;
      |  ^~~~~~~~~~~~
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp:387:17: error: 'Mach1PlatformDefault' was not declared in this scope
  387 |  platformType = Mach1PlatformDefault;
      |                 ^~~~~~~~~~~~~~~~~~~~
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp: In member function 'void Mach1DecodeCore::setRotationQuat(Mach1Point4DCore)':
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.cpp:435:2: error: 'setRotationRadians' was not declared in this scope; did you mean 'setRotationDegrees'?
  435 |  setRotationRadians(angles);
      |  ^~~~~~~~~~~~~~~~~~
      |  setRotationDegrees
make[3]: *** [CMakeFiles/Mach1DecodeMINCAPIstatic.dir/Mach1DecodeMINCore.cpp.obj] Error 1
make[2]: *** [CMakeFiles/Mach1DecodeMINCAPIstatic.dir/all] Error 2
make[1]: *** [all] Error 2
